tests/checker/diagnostics/0088_core_annotated_value_mismatch_08.ml.infer.expected
File "0088_core_annotated_value_mismatch_08.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0088_core_annotated_value_mismatch_08 is not a valid module name.

File "0088_core_annotated_value_mismatch_08.ml", line 1, characters 19-20:
1 | let theta : bool = 0
                       ^
Error: The constant 0 has type int but an expression was expected of type
         bool
